# MCP-FAST-API

./: .gitignore  api.py  client.py  database.py  dockerfile  main.py  pyproject.toml  requirements.txt  server.py
.github/workflows/: main.yml
test/: test_api.py
